--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Laboratorio 8</title>
 </head>
 <body>
-    <h1>Hola mundo</h1>
-    <img src="Screenshot 2024-11-13 212432.png">
+    <h1 style="color: blueviolet (20, 20, 97); font-size: 25px;">Hola mundo</h1>
+    <img src="Screenshot 2024-11-13 212432.png" style="width: 100px;">
     <h1>prueba</h1>
 </body>
 </html>
