--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Laboratorio 8</title>
 </head>
 <body>
-    <h1 style="color: blueviolet (20, 20, 97); font-size: 25px;">Hola mundo</h1>
+    <h1 style="color: blueviolet rgb(20, 20, 97); font-size: 25px;">Hola mundo</h1>
     <p style="color: chocolate; font-family: Arial, Helvetica, sans-serif;"></p>
     <img src="Screenshot 2024-11-13 212432.png" style="width: 500px;">
     <h1>prueba</h1>
