--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1 style="color: blueviolet rgb(20, 20, 97); font-size: 25px;">Hola mundo</h1>
-    <p style="color: chocolate; font-family: Arial, Helvetica, sans-serif;"></p>
+    <p style="color: chocolate; font-family: Arial, Helvetica, sans-serif;">Un parrafo</p>
     <img src="Screenshot 2024-11-13 212432.png" style="width: 500px;">
     <h1>prueba</h1>
 </body>
